--- a/Learn Accessibility by quiz/styles.css
+++ b/Learn Accessibility by quiz/styles.css
@@ -155,9 +155,14 @@
     background: #d0d0d5;
     border: 3px solid #3b3b4f;
   }
+  button:hover{
+    background-color:rgba(0, 0, 0, 0.689);
+    color:#f5f6f7;
+    text-decoration: underline;
+  }
   
   footer {
-    background-color: #2a2a40;
+    background-color: #6f6f94;
     display: flex;
     justify-content: center;
   }
