--- a/Tribute-page (challange)/style.css
+++ b/Tribute-page (challange)/style.css
@@ -28,6 +28,7 @@
     color: var(--black);
     text-align: center;
     letter-spacing:1px;
+    font-weight: bold;
 }
 .header p{
     font-size: 2rem;
@@ -36,17 +37,18 @@
 }
 .middle{
     width: 100%;
-    display: grid;
-    place-content: center;
 }
 .middle .img-div{
-    width: 100%;
-    height:80%;
+    width: 80%;
+    height:90vh;
+    margin: 0 auto;
     overflow: hidden;
     border-radius: 20px;
 }
 .middle .img-div img{
+    /* object-position:bottom; */
     width: 100%;
+    height: 100%;
     object-fit: cover;
     filter: grayscale();
     transition: 3s ease;
