--- a/Technical-documentation/styles.css
+++ b/Technical-documentation/styles.css
@@ -3,3 +3,26 @@
     padding: 0;
     box-sizing: border-box;
 }
+main{
+    width: 100vw;
+    height: max-content;
+    display: flex;
+}
+a{
+    text-decoration: none;
+    color: rgba(0, 0, 0, 0.9);
+    font-size: 20px;
+}
+.left{
+    width: 20%;
+    display: flex;
+    flex-direction: column;
+    gap: 35px;
+    /* position: fixed; */
+    padding: 30px 20px;
+    overflow-y: scroll;
+    background-color: red;
+}
+.right{
+    width: 80%;
+}
