--- a/Technical-documentation/styles.css
+++ b/Technical-documentation/styles.css
@@ -3,26 +3,45 @@
     padding: 0;
     box-sizing: border-box;
 }
-main{
+body{
     width: 100vw;
-    height: max-content;
+    height:100vh;
+    overflow: hidden;
+    
+}
+main{
+    width: 100%;
+    height: 100%;
     display: flex;
+    font-family: sans-serif;
+    
 }
 a{
     text-decoration: none;
-    color: rgba(0, 0, 0, 0.9);
-    font-size: 20px;
+    color: rgba(0, 0, 0, 0.7);
 }
 .left{
     width: 20%;
     display: flex;
     flex-direction: column;
-    gap: 35px;
-    /* position: fixed; */
-    padding: 30px 20px;
+    justify-items:flex-start;
     overflow-y: scroll;
-    background-color: red;
+}
+.left h1{
+    font-size:30px;
+    /* display: grid; */
+    /* place-content: center; */
+    font-weight:500;
+    padding: 20px;
+    border-bottom: 1px solid gray;
+    
+}
+.left p{
+    border-bottom: 1px solid gray;
+    padding:15px 20px;
+    
 }
 .right{
     width: 80%;
+    overflow-y: scroll;
 }
