--- a/Langing_page(Challange)/styles.css
+++ b/Langing_page(Challange)/styles.css
@@ -28,10 +28,13 @@ header nav{
     padding-right: 40px;
 
 }
-.nav-link a{
+.nav-link{
     color:var(--black);
     text-decoration: none;
-    padding: 10px 15px;
+    
+}
+.nav-link:hover{
+    color: blue;
 }
 .form-sec{
     padding: 68px 0;
@@ -42,11 +45,11 @@ header nav{
     font-weight: 550;
     margin-bottom: 20px;
 }
-.form-sec form input{
+.form-sec form input[type="email"]{
     width: 280px;
     padding: 7px;
 }
-.form-sec form button{
+.form-sec form input[type="submit"]{
     display: block;
     margin:15px auto;
     color:black;
@@ -55,21 +58,28 @@ header nav{
     padding: 5px 15px;
     font-size: 16px;
     border: none;
+    transition: 0.2s ease-in;
+}
+ form input[type="submit"]:hover{
+    color: white;
+    background-color: black;
 }
 .features-sec{
-    margin-top: 120px;
+    margin-top: 20px;
     display: grid;
     place-content: center;
 }
 .features-sec .features{
     width:65%;
-    margin-left:300px;
+    margin-left:280px;
 }
 .features p{
     line-height: 20px;
     margin-bottom: 60px;
 }
 .features #video{
+    width:560px; 
+    height:315px;
     padding: 20px 30px;
     margin-left: 50px;
 }
@@ -132,4 +142,112 @@ footer .para{
 a{
     text-decoration: none;
     color: var(--black);
+}
+/* ============================================= */
+@media (max-width:576px) {
+    header{
+        padding:7px;
+        align-items: start;
+    }
+    header .logo-left img{
+        width: 150px;
+    }
+    header nav{
+        gap: 10px;
+        padding-right: 0px;
+    
+    }
+    .nav-link{
+        font-size: 8px;
+        
+    }
+    
+    .form-sec{
+        padding: 50px 0;
+    }
+    .form-sec h1{
+        font-size: 12px;
+        margin-bottom: 5px;
+    }
+    .form-sec form input[type="email"]{
+        width:150px;
+        padding: 2px;
+        font-size: 8px;
+    }
+    .form-sec form input[type="submit"]{
+        margin:5px auto;
+        padding: 5px 15px;
+        font-size: 8px;
+    }
+     
+    .features-sec{
+        padding: 0 5px;
+        margin-top: 0px;
+        
+    }
+    .features h2{
+        font-size: 10px;
+    }
+    .features-sec .features{
+        margin-left:auto;
+        width: 80%;
+    }
+    .features p{
+        font-size: 7px;
+        line-height: 10px;
+        margin-bottom: 30px;
+    }
+    .features .frame{
+        padding: 0;
+        margin-left: 0px;
+        width:95%;
+        
+    }
+    .frame #video{
+        width: 100%;
+        height:100%;
+        padding: 0;
+        margin: 0;
+    }
+    .containers{
+        
+        gap: 5px;
+        width:100%;
+        padding: 10px;    
+        margin:20px auto;
+    }
+    /* ================== */
+    .box{
+        padding-bottom: 10px;
+        gap: 5px;
+    }
+    .box h2{
+        font-size: 10px;
+        padding:5px;
+    }
+    .box h3{
+        font-size: 10px;
+      
+    }
+    .box p, .para{
+        font-size: 8px;
+        line-height: 15px;
+    }
+    .box button{
+        font-size: 8px;
+        padding: 5px;
+        
+    }
+    footer{
+        width:90%;
+        padding: 10px;
+    }
+    footer ul{
+        gap: 10px;
+        font-size: 9px;
+    }
+    footer .para{
+        font-size: 9px;
+    }
+    
 }
