--- a/Langing_page(Challange)/styles.css
+++ b/Langing_page(Challange)/styles.css
@@ -146,7 +146,7 @@ a{
 /* ============================================= */
 @media (max-width:576px) {
     header{
-        padding:7px;
+        padding:7px 10px;
         align-items: start;
     }
     header .logo-left img{
@@ -200,8 +200,9 @@ a{
     .features .frame{
         padding: 0;
         margin-left: 0px;
-        width:95%;
-        
+        width:90%;
+        height:150px;
+        /* padding:5px; */
     }
     .frame #video{
         width: 100%;
