--- a/Portfolio(challange)/styles.css
+++ b/Portfolio(challange)/styles.css
@@ -54,10 +54,11 @@
 }
 .project-sec{
     background-color: var(--main-blue);
-    padding: 40px;
+    padding: 100px 50px;
+    display: grid;
+    place-items: center;
 }
 .project-sec h2{
- text-align: center;
  font-size: 40px;
  color:var(--white);
  padding-bottom: 40px;
@@ -106,4 +107,74 @@ a{
 }
 .grid-sec a:hover img{
   transform: scale(1.2);
+}
+.showall{
+    background-color: black;
+    color: white;
+    font-size: 20px;
+    padding: 12px 25px;
+}
+.showall:hover{
+    background: var(--primary-gradient);
+}
+footer{
+    width: 100%;
+    height: 100vh;
+    background-color: var(--primary-black);
+    display: grid;
+    grid-template-rows:90% 10%;
+    padding: 40px 0px 40px 0px;
+    /* place-content: center; */
+}
+footer .upside{
+    display: grid;
+    place-content: center;
+}
+.upside h2{
+    color: var(--white);
+    font-size: 60px;
+    text-align: center;
+}
+.upside p{
+    text-align: center;
+    font-size: 20px;
+    font-weight:lighter;
+    font-style: italic;
+    color:rgba(255, 255, 255, 0.7);
+    padding: 10px 0;
+}
+.upside .links{
+    display: flex;
+    /* gap: 40px; */
+    padding: 40px;
+}
+.upside .links a{
+    font-size: 25px;
+    color:var(--white);
+    padding:20px;
+    transition: 0.3s ease-out;
+}
+.upside .links a:hover{
+    transform: translateY(10px);
+    border-radius: 20px;
+    background: var(--primary-gradient);
+}
+.downside{
+    display: flex;
+    justify-content: space-around;
+    color:rgba(255, 255, 255, 0.717);
+    font-size: 20px;
+    border-top: 4px solid var(--nav-red);
+    padding: 30px;
+}
+.downside a{
+    color:rgba(255, 255, 255, 0.717);
+}
+.downside a i{
+    vertical-align: middle;
+    padding: 0 5px;
+}
+/* ==================================media query============ */
+@media (max-width:576px) {
+    
 }
